--- a/main.css
+++ b/main.css
@@ -26,14 +26,35 @@ div {
 }
 
 p {
+  text-align: left;
+  margin-left: 40px;	
   font-size: 200%;
   font-style: bold;	
+  font-weight: bold;
 }
 
-button{
-  color: black;
+#loader{
+  text-align: center;
+  color: black;4
   width: 200px;
-  height: 50px;
+  height: 30px;
   background-color: #f4ce42;
-  
+  border-radius: 25px;
+  margin-bottom: 10px
+}
+
+.user{
+  background:none!important;
+     color:inherit;
+     border:none; 
+     padding:0!important;
+     font: inherit;
+     /*border is optional*/
+     border-bottom:1px solid #444; 
+     cursor: pointe;
+}
+	
+a{
+  color: black;
+  text-decoration: none;
 }
